fixed menu on mobile and packed jquery into main.js

--- a/wp-content/themes/beyond-magazine/inc/sass/_slicknav.sass
+++ b/wp-content/themes/beyond-magazine/inc/sass/_slicknav.sass
@@ -80,6 +80,9 @@
 /* Button Text
 
 .slicknav_menu
+  position: fixed
+  width: 100% 
+  z-index: 9999
   .slicknav_menutxt
     color: #FFF
     font-weight: bold
