--- a/wp-content/themes/beyond-magazine/inc/sass/style.sass
+++ b/wp-content/themes/beyond-magazine/inc/sass/style.sass
@@ -253,6 +253,8 @@ dd
   padding-top: $padding-std
   @media screen and (min-width: 900px)
     position: relative
+  @media screen and (max-width: 768px)
+    padding-top: 150px
 
 #kt-logo h1
   font-size: 1.8em
